major design improvements and functionalities

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-11 mx-auto">
-            <h1 class="text-white font-tertiary">Hi! <br> I’m Fred <br> Frontend <br> Developer</h1>
+            <h1 class="text-white font-tertiary main-title">Hi! <br> I’m Fred. <br> Frontend Developer</h1>
           </div>
         </div>
       </div>
@@ -95,11 +95,11 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-10 mx-auto text-center">
-            <p class="font-secondary paragraph-lg text-dark">
+            <p class="font-secondary paragraph-lg text-dark paragraph-about">
               Left my hometown at 18 to follow my entrepreneurial dreams and traveled over 20 countries since – Throughout the years I’ve worked various jobs while savoring life and getting to meet amazing people from all around the world.
               <br>
               <br>
-              I’m now studying full-time with the Treehouse bootcamp to become a frontend developer and am absolutely thrilled for the challenges and opportunities ahead.
+              I'm now studying full-time at the Treehouse FEWD bootcamp to become a frontend developer and am absolutely thrilled for the challenges and opportunities ahead.
             </p>
           </div>
         </div>
@@ -112,7 +112,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-title">Skills</h2>
+            <h2 class="section-title bigger-titles">Some of my skills</h2>
           </div>
           <div class="col-lg-3 col-6 mb-4 mb-lg-0">
             <div class="card shadow text-center">
@@ -204,7 +204,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
-            <h2 class="section-title">Projects</h2>
+            <h2 class="section-title bigger-titles">Projects I've built</h2>
           </div>
         </div>
         <div class="row shuffle-wrapper">
@@ -213,7 +213,10 @@
               <img src="images/portfolio/dashboard.png" alt="dashboard-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
+                  <h5 class="project-paragraph-h">A weba pp dashboard</h5>
+                  <p class="project-paragraph no-show-para">Built a full-fledged frontend dabshboard from scratch using HTML, Sass, and JavaScript.</p>
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/web-app-dashboard/" target="_blank">See project</a>
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/web-app-dashboard" target="_blank">view code</a>
                 </div>
               </div>
             </div>
@@ -223,7 +226,10 @@
               <img src="images/portfolio/directory.png" alt="directory-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
+                  <h5 class="project-paragraph-h">An employee directory</h5>
+                  <p class="project-paragraph no-show-para">Parsed JSON data from an API to display 12 random employees and their information.</p>
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/employee-directory-api/" target="_blank">See project</a>
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/employee-directory-api" target="_blank">view code</a>
                 </div>
               </div>
             </div>
@@ -233,7 +239,10 @@
               <img src="images/portfolio/guide.png" alt="guide-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
+                  <h5 class="project-paragraph-h">A web style guide</h5>
+                  <p class="project-paragraph no-show-para">Converted CSS into Sass and built a useful micro-framework to quickly prototype other websites.</p>
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/web-style-guide/" target="_blank">See project</a>
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/web-style-guide" target="_blank">view code</a>
                 </div>
               </div>
             </div>
@@ -243,7 +252,10 @@
               <img src="images/portfolio/form.png" alt="form-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
+                  <h5 class="project-paragraph-h">An online registration form</h5>
+                  <p class="project-paragraph no-show-para">Built a responsive, mobile-friendly registration form.</p>
+                  <!-- <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/online-registration-form/" target="_blank">view project</a> -->
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/online-registration-form" target="_blank">view code</a>
                 </div>
               </div>
             </div>
@@ -253,7 +265,10 @@
               <img src="images/portfolio/game.png" alt="game-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
+                  <h5 class="project-paragraph-h">A game show app</h5>
+                  <p class="project-paragraph no-show-para">Built a browser version of the Wheel of Success, a game where players try to guess a random phrase.</p>
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/game-show-app/" target="_blank">See project</a>
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/game-show-app" target="_blank">view code</a>
                 </div>
               </div>
             </div>
@@ -263,7 +278,10 @@
               <img src="images/portfolio/gallery.png" alt="gallery-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
-                  <a class="btn btn-light btn-sm" href="project-single.html">view project</a>
+                  <h5 class="project-paragraph-h">An interactive photo gallery</h5>
+                  <p class="project-paragraph no-show-para">Built an interactive photo gallery with CSS grid layout and JavaScript.</p>
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/interactive-photo-gallery/" target="_blank">See project</a>
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/interactive-photo-gallery" target="_blank">view code</a>
                 </div>
               </div>
             </div>
