new project illustrations and bug fixes

--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
               <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#projects">Projects</a>
             </li>
           </ul>
         </div>
@@ -56,7 +53,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-11 mx-auto">
-            <h1 class="text-white font-tertiary main-title">Hi! <br> I’m Fred. <br> Frontend Developer</h1>
+            <h1 class="text-white font-tertiary main-title">Hi! <br> I’m Fred. <br> Frontend Developer &lt&sol;&gt</h1>
           </div>
         </div>
       </div>
@@ -108,7 +105,8 @@
     <!-- /about -->
 
     <!-- skills -->
-    <section class="section" id="skills">
+    <a class="anchor" id="skills"></a>
+    <section class="section skills">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -116,8 +114,8 @@
           </div>
           <div class="col-lg-3 col-6 mb-4 mb-lg-0">
             <div class="card shadow text-center">
-              <div class="position-relative rounded-top progress-wrapper" data-color="#fdb157">
-                <div class="wave" data-progress="70%"></div>
+              <div class="position-relative rounded-top progress-wrapper" data-color="#74d3dc">
+                <div class="wave" data-progress="84%"></div>
               </div>
               <div class="card-footer bg-white">
                 <h4 class="card-title">HTML</h4>
@@ -126,8 +124,8 @@
           </div>
           <div class="col-lg-3 col-6 mb-4 mb-lg-0">
             <div class="card shadow text-center">
-              <div class="position-relative rounded-top progress-wrapper" data-color="#9473e6">
-                <div class="wave" data-progress="65%"></div>
+              <div class="position-relative rounded-top progress-wrapper" data-color="#70c3df">
+                <div class="wave" data-progress="80%"></div>
               </div>
               <div class="card-footer bg-white">
                 <h4 class="card-title">CSS</h4>
@@ -136,18 +134,18 @@
           </div>
           <div class="col-lg-3 col-6 mb-4 mb-lg-0">
             <div class="card shadow text-center">
-              <div class="position-relative rounded-top progress-wrapper" data-color="#bdecf6">
+              <div class="position-relative rounded-top progress-wrapper" data-color="#77ade6">
                 <div class="wave" data-progress="70%"></div>
               </div>
               <div class="card-footer bg-white">
-                <h4 class="card-title">Sass</h4>
+                <h4 class="card-title">Saas</h4>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-6 mb-4 mb-lg-0">
             <div class="card shadow text-center">
-              <div class="position-relative rounded-top progress-wrapper" data-color="#ffbcaa">
-                <div class="wave" data-progress="60%"></div>
+              <div class="position-relative rounded-top progress-wrapper" data-color="#7d99ee">
+                <div class="wave" data-progress="74%"></div>
               </div>
               <div class="card-footer bg-white">
                 <h4 class="card-title">Bootstrap</h4>
@@ -156,18 +154,18 @@
           </div>
           <div class="col-lg-3 col-6 mb-4 mb-lg-0">
             <div class="card shadow text-center">
-              <div class="position-relative rounded-top progress-wrapper" data-color="#e6c86e">
-                <div class="wave" data-progress="60%"></div>
+              <div class="position-relative rounded-top progress-wrapper" data-color="#7e84f3">
+                <div class="wave" data-progress="87%"></div>
               </div>
               <div class="card-footer bg-white">
-                <h4 class="card-title">Javascript</h4>
+                <h4 class="card-title">JavaScript</h4>
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-6 mb-4 mb-lg-0">
             <div class="card shadow text-center">
-              <div class="position-relative rounded-top progress-wrapper" data-color="#508cd7">
-                <div class="wave" data-progress="65%"></div>
+              <div class="position-relative rounded-top progress-wrapper" data-color="#7e6cfb">
+                <div class="wave" data-progress="83%"></div>
               </div>
               <div class="card-footer bg-white">
                 <h4 class="card-title">React.js</h4>
@@ -176,8 +174,8 @@
           </div>
           <div class="col-lg-3 col-6 mb-4 mb-lg-0">
             <div class="card shadow text-center">
-              <div class="position-relative rounded-top progress-wrapper" data-color="#d77355">
-                <div class="wave" data-progress="75%"></div>
+              <div class="position-relative rounded-top progress-wrapper" data-color="#7354f4">
+                <div class="wave" data-progress="79%"></div>
               </div>
               <div class="card-footer bg-white">
                 <h4 class="card-title">Node.js</h4>
@@ -186,11 +184,11 @@
           </div>
           <div class="col-lg-3 col-6 mb-4 mb-lg-0">
             <div class="card shadow text-center">
-              <div class="position-relative rounded-top progress-wrapper" data-color="#64b964">
-                <div class="wave" data-progress="65%"></div>
+              <div class="position-relative rounded-top progress-wrapper" data-color="#6146D9">
+                <div class="wave" data-progress="72%"></div>
               </div>
               <div class="card-footer bg-white">
-                <h4 class="card-title">Python</h4>
+                <h4 class="card-title">Pyhon</h4>
               </div>
             </div>
           </div>
@@ -200,7 +198,8 @@
     <!-- /skills -->
 
     <!-- portfolio -->
-    <section class="section" id="portfolio">
+    <a class="anchor" id="projects"></a>
+    <section class="section">
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
@@ -210,7 +209,7 @@
         <div class="row shuffle-wrapper">
           <div class="col-lg-4 col-6 mb-4 shuffle-item">
             <div class="position-relative rounded hover-wrapper">
-              <img src="images/portfolio/dashboard.png" alt="dashboard-image" class="img-fluid rounded w-100">
+              <img src="images/portfolio/dashboard-illustration.png" alt="dashboard-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
                   <h5 class="project-paragraph-h">A weba pp dashboard</h5>
@@ -223,7 +222,7 @@
           </div>
           <div class="col-lg-4 col-6 mb-4 shuffle-item">
             <div class="position-relative rounded hover-wrapper">
-              <img src="images/portfolio/directory.png" alt="directory-image" class="img-fluid rounded w-100">
+              <img src="images/portfolio/directory-illustration.png" alt="directory-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
                   <h5 class="project-paragraph-h">An employee directory</h5>
@@ -236,7 +235,7 @@
           </div>
           <div class="col-lg-4 col-6 mb-4 shuffle-item">
             <div class="position-relative rounded hover-wrapper">
-              <img src="images/portfolio/guide.png" alt="guide-image" class="img-fluid rounded w-100">
+              <img src="images/portfolio/guide-illustration.png" alt="guide-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
                   <h5 class="project-paragraph-h">A web style guide</h5>
@@ -249,12 +248,12 @@
           </div>
           <div class="col-lg-4 col-6 mb-4 shuffle-item">
             <div class="position-relative rounded hover-wrapper">
-              <img src="images/portfolio/form.png" alt="form-image" class="img-fluid rounded w-100">
+              <img src="images/portfolio/form-illustration.png" alt="form-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
                   <h5 class="project-paragraph-h">An online registration form</h5>
                   <p class="project-paragraph no-show-para">Built a responsive, mobile-friendly registration form.</p>
-                  <!-- <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/online-registration-form/" target="_blank">view project</a> -->
+                  <a class="btn btn-light btn-sm mb-3 mx-1" href="https://fred-pi.github.io/online-registration-form/" target="_blank">view project</a>
                   <a class="btn btn-light btn-sm mb-3 mx-1" href="https://github.com/fred-pi/online-registration-form" target="_blank">view code</a>
                 </div>
               </div>
@@ -262,7 +261,7 @@
           </div>
           <div class="col-lg-4 col-6 mb-4 shuffle-item">
             <div class="position-relative rounded hover-wrapper">
-              <img src="images/portfolio/game.png" alt="game-image" class="img-fluid rounded w-100">
+              <img src="images/portfolio/game-illustration.png" alt="game-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
                   <h5 class="project-paragraph-h">A game show app</h5>
@@ -275,7 +274,7 @@
           </div>
           <div class="col-lg-4 col-6 mb-4 shuffle-item">
             <div class="position-relative rounded hover-wrapper">
-              <img src="images/portfolio/gallery.png" alt="gallery-image" class="img-fluid rounded w-100">
+              <img src="images/portfolio/gallery-illustration.png" alt="gallery-image" class="img-fluid rounded w-100">
               <div class="hover-overlay">
                 <div class="hover-content">
                   <h5 class="project-paragraph-h">An interactive photo gallery</h5>
@@ -297,9 +296,8 @@
         <div class="container">
           <div class="row d-flex justify-content-between">
             <div class="d-flex flex-column col-3 ol-md-4 mb-4">
-              <a class="text-white mb-3 ml-4" href="https://www.linkedin.com/in/fredbalzi/" target="_blank"><i class="ti-linkedin"></i></a>
-              <a class="text-white mb-3 ml-4" href="https://github.com/fred-pi" target="_blank"><i class="ti-twitter"></i></a>
-              <a class="text-white mb-3 ml-4" href="https://twitter.com/fredbalzi" target="_blank"><i class="ti-github"></i></a>
+              <a class="text-white mb-4 ml-4" href="https://github.com/fred-pi" target="_blank"><i class="ti-github"></i></a>
+              <a class="text-white mb-4 ml-4" href="https://www.linkedin.com/in/fredbalzi/" target="_blank"><i class="ti-linkedin"></i></a>
             </div>
             <div class="col-9 mb-4">
               <h5 class="text-light">Email</h5>
@@ -318,7 +316,7 @@
   <!-- slick slider -->
   <script src="plugins/slick/slick.min.js"></script>
   <!-- filter -->
-  <script src="plugins/shuffle/shuffle.min.js"></script>
+  <!-- <script src="plugins/shuffle/shuffle.min.js"></script> -->
   <!-- Main Script -->
   <script src="js/script.js"></script>
 
